src/BadLang/Tests/BadC.Tests/tests/failing/ParseException/RecursiveNestedStructure2.basm

.code code code_raw BadC
{
	struct InnerTest : export
	{
		Test Inner;
	}

	struct Test : export
	{
		InnerTest Inner;
	}

	void __main__() : export
	{
		Test test;
		halt;
	}

}